<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#efefef"
    tools:context="com.example.mango.singlescreen.MainActivity">
    <LinearLayout
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/udacity_2"
            android:scaleType="centerInside"
            android:background="@color/backGround"
            android:layout_height="150dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backGround"
            android:paddingTop="@dimen/banner_padding"
            android:paddingLeft="@dimen/liner_padding"
            android:paddingRight="@dimen/liner_padding"
            android:paddingBottom="@dimen/banner_padding">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:text="@string/company_name"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_below="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/company_tag"
                android:id="@+id/textView" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_margin="@dimen/default_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="Popular Courses"
                android:textColor="@color/backGround"
                android:textStyle="bold" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/categoryRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/default_margin"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/company_about"
                android:textColor="@color/backGround"
                android:textStyle="bold"
                android:id="@+id/about_us" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/company_about_txt"
                android:id="@+id/about_us_txt" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="@dimen/default_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/company_team"
                android:textColor="@color/backGround"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/team_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/company_contact"
                android:textColor="@color/backGround"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/map_layout"
                android:layout_marginTop="@dimen/ele_marginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/ic_location"/>
                <TextView
                    android:text="@string/address"
                    android:textSize="@dimen/text_size"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/phone_layout"
                android:layout_marginTop="@dimen/ele_marginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/ic_call"/>
                <TextView
                    android:text="@string/phone"
                    android:textSize="@dimen/text_size"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_layout"
                android:layout_marginTop="@dimen/ele_marginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/ic_public"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:text="@string/website"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>